cmake_minimum_required(VERSION 3.27)
project(Neetcode)

set(CMAKE_CXX_STANDARD 17)

add_executable(Neetcode main.cpp)
add_executable(Ej27 Ej27_RemoveElement.cpp)
add_executable(Ej1929 Ej1929_ConcatenationOfAnArray.cpp)
add_executable(Ej20 Ej20_ValidParentheses.cpp)
add_executable(Ej155 Ej155_MinStack.cpp)
add_executable(DesignSinglyLinkedList DesignSinglyLinkedList.cpp
        EC4/pruebasEC4.cpp)
add_executable(Ej206 Ej206_ReverseLinkedList.cpp)
add_executable(Ej83 Ej83_RemoveDuplicatesFromSortedList.cpp)
add_executable(Ej2 Ej2_AddTwoNumbers.cpp)
add_executable(Ej707 EC3/Ej707_DesignDoubleLinkedList.cpp)
add_executable(Ej19 Ej19_RemoveNthNodeFromList.cpp)
add_executable(Ej21 Ej21_MergeTwoLinkedLists.cpp)
add_executable(pregunta2 EC2/pregunta2.cpp)
add_executable(Hanoi Hanoi_AED_S4A.cpp)
add_executable(Ej442 S5_HashTables/Ej442_FindAllDuplicatesInAnArray.cpp)
add_executable(Ej128 S5_HashTables/EC5/Ej128_LongestConsecutiveSequence.cpp)
add_executable(Ej217 S5_HashTables/EC5/Ej217_ContainsDuplicate.cpp)
add_executable(prueba S5_HashTables/EC5/prueba.cpp)
add_executable(Ej1.69_Arqui Ej1.69_Arqui_ARM_Harris.cpp)
add_executable(S6_bst_pruebas S6_BST/S6_bst_pruebas.cpp)
add_executable(Ej235 S6_BST/EC6/Ej235_LowestCommonAncestorOfABST.cpp)
add_executable(EC7_1 S7_AVL/EC7/problema_1.cpp)
add_executable(EC7_2 S7_AVL/EC7/problema_2.cpp)
add_executable(EC7_3 S7_AVL/EC7/problema_3.cpp)
add_executable(Ej739 EC4/Ej739_DailyTemperatures.cpp)
add_executable(pruebasEC4 EC4/pruebasEC4.cpp)
